# JDoc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml
bindings/: README.md
bindings/go/: go.mod  jdoc.go  jdoc_test.go
bindings/java/: build.gradle  settings.gradle
bindings/java/src/main/java/com/jiran/jdoc/: Category.java  FormatInfo.java  Image.java  Jdoc.java  JdocException.java  JdocLibrary.java  MemberResult.java  Options.java  Page.java  PageStream.java
bindings/java/src/test/java/com/jiran/jdoc/: DetectTest.java  PageStreamTest.java
docs/: alz-egg-format-notes.md  archive-roadmap.md  decode-profile.md  rar-feasibility.md
include/jdoc/: archive.h  detect.h  eml.h  hwp.h  hwp_types.h  hwpx.h  jdoc.h  jdoc_c_api.h  office.h  pdf.h  types.h
python/jdoc/: __init__.py
src/: convert_internal.h  detect.cpp  hwp.cpp  hwpx.cpp  jdoc.cpp  jdoc_c_api.cpp  main.cpp  office.cpp  pdf.cpp  pdf_crypt.h  python_bindings.cpp  xml_utils.h  zip_reader.cpp  zip_reader.h
src/archive/: alz_reader.cpp  alz_reader.h  archive_walker.cpp  codec_streams.cpp  codec_streams.h  data_source.h  egg_reader.cpp  egg_reader.h  input_stream.cpp  input_stream.h  member_pipeline.cpp  member_pipeline.h  rar_reader.cpp  rar_reader.h  seven_zip_reader.cpp  seven_zip_reader.h  tar_reader.cpp  tar_reader.h
src/common/: binary_utils.h  cp949_tables.inc  emf_text.cpp  emf_text.h  file_utils.h  image_utils.h  inflate.cpp  inflate.h  mapped_file.h  media_cache.h  png_encode.h  string_utils.cpp  string_utils.h  wmf_text.cpp  wmf_text.h
src/html/: html_charset.cpp  html_charset.h  html_parser.cpp  html_parser.h
src/legacy/: doc_parser.cpp  doc_parser.h  hwp3_parser.cpp  hwp3_parser.h  ole_reader.cpp  ole_reader.h  ppt_parser.cpp  ppt_parser.h  rtf_parser.cpp  rtf_parser.h  xls_parser.cpp  xls_parser.h
src/mail/: eml_parser.cpp  eml_parser.h  msg_parser.cpp  msg_parser.h
src/odf/: odf_parser.cpp  odf_parser.h
src/ooxml/: docx_parser.cpp  docx_parser.h  pptx_parser.cpp  pptx_parser.h  xlsb_parser.cpp  xlsb_parser.h  xlsx_parser.cpp  xlsx_parser.h
src/pdf/: pdf.cpp  pdf_content.cpp  pdf_content.h  pdf_core.cpp  pdf_core.h  pdf_crypt.cpp  pdf_extract.h  pdf_markdown.cpp  pdf_tables.cpp  pdf_visual.cpp
test/: bench_convert.cpp  test_archive.cpp  test_detect.cpp  test_emf.cpp  test_eml.cpp  test_hwp3.cpp  test_hwp5.cpp  test_hwpx.cpp  test_msg.cpp  test_odf.cpp  test_office.cpp  test_pdf.cpp  test_pdf_crypt.cpp  test_safety.cpp  test_stream.cpp  test_thread_safety.cpp  test_wmf.cpp
test/fixtures/7z/: bigsolid.7z  encrypted.7z  korean.7z  lzma.7z  lzma2.7z  ppmd.7z  solid.7z  store.7z
test/fixtures/rar/: rar5_comp.rar  rar5_enc.rar  rar5_hdrenc.rar  rar5_store.rar
