[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.11", "cmake>=3.16"]
build-backend = "setuptools.build_meta"

[project]
name = "jdoc"
version = "2.0.0"
description = "JDoc - Universal document converter (PDF, Office, HTML, HWP/HWPX) to Markdown/Text"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Markup",
]

[tool.setuptools.packages.find]
where = ["python"]
